# etchdb

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/etchdb/: __init__.py  __main__.py  adapter.py  cli.py  codecs.py  db.py  errors.py  expr.py  migrations.py  query.py  row.py
src/etchdb/aiosqlite/: __init__.py  adapter.py
src/etchdb/asyncpg/: __init__.py  adapter.py
src/etchdb/psycopg/: __init__.py  adapter.py
src/etchdb/sql/: __init__.py  postgres.py
tests/: _models.py  test_postgres_sql.py
tests/integration/: conftest.py  test_batch.py  test_cli.py  test_codecs.py  test_errors.py  test_execute_rowcount.py  test_expressions.py  test_facade.py  test_fields_not_in_db.py  test_in_filter.py  test_is_null.py  test_iter_rows.py  test_iter_rows_keyset.py  test_migrations.py  test_ping_and_aclose.py  test_pool_kwargs.py  test_readme_example.py  test_typed_crud.py  test_update_where.py
tests/unit/: test_adapters.py  test_cli.py  test_db_dispatch.py  test_migrations.py  test_sql_emitter.py
