[project]
name = "etchdb"
version = "0.0.1"
description = "Minimal async DB layer for Python. Typed CRUD over Pydantic, raw SQL when you need it"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Hannu Varjoranta", email = "hannu@varjosoft.com" },
]
keywords = [
    "postgresql",
    "asyncpg",
    "psycopg",
    "pydantic",
    "async",
    "database",
    "sqlite",
    "orm",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.30.0"]
psycopg = ["psycopg[binary]>=3.2"]
sqlite = ["aiosqlite>=0.19.0"]
all = [
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2",
    "aiosqlite>=0.19.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "ty",
]

[project.urls]
Homepage = "https://github.com/varjoranta/etchdb"
Repository = "https://github.com/varjoranta/etchdb"
Issues = "https://github.com/varjoranta/etchdb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etchdb"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
